--- a/package.json
+++ b/package.json
@@ -11,9 +11,20 @@
     "url": "git+https://github.com/gegeyang0124/react-native-update-js.git"
   },
   "keywords": [
-    "react-native-update-js"
+    "react-native-update-js",
+    "react-native-update",
+    "react-native",
+    "update-js",
+    "update",
+    "js",
+    "热更新"
   ],
-  "author": "周阳",
+  "author": {
+    "name": "周阳",
+    "email": "584450903@qq.com",
+    "url": "https://github.com/gegeyang0124",
+    "blog":"http://blog.sina.com.cn/s/articlelist_6078695441_0_1.html"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gegeyang0124/react-native-update-js/issues"
