--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "bugs": {
     "url": "https://github.com/gegeyang0124/react-native-update-js/issues"
   },
+  "dependencies": {
+    "react-native-root-siblings": "^3.0.0"
+  },
   "homepage": "https://github.com/gegeyang0124/react-native-update-js#readme"
 }
